Added support to read CS endpoint from the NSA document stored in NSI-DDS.